--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="asset/css/bootstrap.min.css">
 </head>
 <body>
+<script  src="asset/js/jquery-1.12.3.min.js"></script>
 	<h1></h1>
 </body>
 </html>
