'为index.html添加移动端设备快捷图标'

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<link rel="apple-touch-icon-precomposed" size="144×144" href="img/touch/apple-touch-icon-144×144-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" size="114×114" href="img/touch/apple-touch-icon-114×114-precomposed.png">
+
 	<title>Document</title>
 </head>
 <body>
