'为index.html添加meta标签等'

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="apple-touch-icon-precomposed" size="144×144" href="img/touch/apple-touch-icon-144×144-precomposed.png">
 	<link rel="apple-touch-icon-precomposed" size="114×114" href="img/touch/apple-touch-icon-114×114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" size="72×72" href="img/touch/apple-touch-icon-72×72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed"  href="img/touch/apple-touch-icon-57×57-precomposed.png">
+	<link rel="shortcut"  href="img/touch/apple-touch-icon.png">
+	<meta name="apple-moblie-web-app-capable" content="yes">
+    
 
 	<title>Document</title>
 </head>
