--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="apple-moblie-web-app-capable" content="yes">
     
 
-	<title>Document</title>
+	<title>Movetalk</title>
 </head>
 <body>
 <script  src="asset/js/jquery-1.12.3.min.js"></script>
